# GateProof

.github/workflows/: gateproof-ci.yml  (+3 more)
gateproof/: .gitleaks.toml  README.md  pyproject.toml
gateproof/.gateproof/evidence/: compliance-report.html  evidence-manifest.json  findings-normalized.json  gate-decision.json
gateproof/compliance/: controls.yaml
gateproof/examples/: gateproof-python-go.yaml  gateproof-python.yaml
gateproof/examples/clean-python-app/: Dockerfile  app.py  requirements.txt
gateproof/examples/vulnerable-go-app/: Dockerfile  go.mod  main.go
gateproof/examples/vulnerable-python-app/: Dockerfile  README.md  app.py  requirements.txt
gateproof/policies/: default.yaml  demo-pass.yaml  python-go.yaml
gateproof/scripts/: run_security_tools.sh
gateproof/src/gateproof/: __init__.py  cli.py  config.py  evidence.py  models.py  policy_engine.py  reporting.py
gateproof/src/gateproof/adapters/: __init__.py  bandit.py  gitleaks.py  gosec.py  govulncheck.py  loader.py  mock.py  pip_audit.py  trivy.py
gateproof/src/gateproof/scanners/: __init__.py  common.py  go.py  python.py  runner.py
gateproof/templates/: compliance_report.html.j2
gateproof/tests/: test_adapters.py  test_config.py  test_evidence.py  test_go_adapters.py  test_models.py  test_policy_engine.py  test_scan_cli.py  test_scanner_runner.py
gateproof/tests/fixtures/: bandit-report.json  default_policy.yaml  gitleaks-report.json  gosec-report.json  govulncheck-concatenated-report.json  govulncheck-report.json  mock_findings.json  pip-audit-report.json  trivy-report.json
(+2 files in other folders)
