[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateproof"
version = "0.1.0"
description = "Research prototype for CI/CD Security Gate decisions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
gateproof = "gateproof.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

